public/css/tat.css
/* ... */
#side-dropdowns-aqua {
	width: 250px;
	height: 50px;
	font-size: 18px;
	background: #0a9ef4 !important;
	background-image: -webkit-linear-gradient(top, #0a9ef4, #00f9a7)!important;
	background-image: -moz-linear-gradient(top, #0a9ef4, #00f9a7)!important;
	background-image: -ms-linear-gradient(top, #0a9ef4, #00f9a7)!important;
	background-image: -o-linear-gradient(top, #0a9ef4, #00f9a7)!important;
	background-image: linear-gradient(to bottom, #0a9ef4, #00f9a7)!important;
	-webkit-border-radius: 28;
	-moz-border-radius: 28;
	border-radius: 28px;
	color: #ffffff;
	padding: 10px 20px 10px 20px;
	text-decoration: none;
    border-top-left-radius: 5px !important;
    border-bottom-left-radius: 5px !important;
    border-bottom-right-radius: 5px !important;
    border-top-right-radius: 5px !important;
}
#send-button {
	margin-bottom: 10px;
	background: #fecf75 !important;
	background-image: -webkit-linear-gradient(top, #fecf75, #fb6966)!important;
	background-image: -moz-linear-gradient(top, #fecf75, #fb6966)!important;
	background-image: -ms-linear-gradient(top, #fecf75, #fb6966)!important;
	background-image: -o-linear-gradient(top, #fecf75, #fb6966)!important;
	background-image: linear-gradient(to bottom, #fecf75, #fb6966)!important;
	-webkit-border-radius: 28;
	-moz-border-radius: 28;
	border-radius: 28px;
	color: #ffffff;
	padding: 10px 20px 10px 20px;
	text-decoration: none;
    border-top-left-radius: 5px !important;
    border-bottom-left-radius: 5px !important;
    border-bottom-right-radius: 5px !important;
    border-top-right-radius: 5px !important;
}
#letsgo-about {
	background: #44c4f8 !important;
	background-image: -webkit-linear-gradient(top, #44c4f8, #3144a2)!important;
	background-image: -moz-linear-gradient(top, #44c4f8, #3144a2)!important;
	background-image: -ms-linear-gradient(top, #44c4f8, #3144a2)!important;
	background-image: -o-linear-gradient(top, #44c4f8, #3144a2)!important;
	background-image: linear-gradient(to bottom, #44c4f8, #3144a2)!important;
	-webkit-border-radius: 28;
	-moz-border-radius: 28;
	border-radius: 28px;
	color: #ffffff;
	padding: 10px 20px 10px 20px;
	text-decoration: none;
    border-top-left-radius: 5px !important;
    border-bottom-left-radius: 5px !important;
    border-bottom-right-radius: 5px !important;
    border-top-right-radius: 5px !important;
}
#letsgo-berlin {
	width: 75px;
	height: 50px;
	margin-top: 0px;
	font-size: 12px !important;
	background: #0a9ef4 !important;
	background-image: -webkit-linear-gradient(top, #0a9ef4, #00f9a7)!important;
	background-image: -moz-linear-gradient(top, #0a9ef4, #00f9a7)!important;
	background-image: -ms-linear-gradient(top, #0a9ef4, #00f9a7)!important;
	background-image: -o-linear-gradient(top, #0a9ef4, #00f9a7)!important;
	background-image: linear-gradient(to bottom, #0a9ef4, #00f9a7)!important;
	-webkit-border-radius: 28;
	-moz-border-radius: 28;
	border-radius: 28px;
	color: #ffffff;
	padding: 10px 20px 10px 20px;
	text-decoration: none;
    border-top-left-radius: 5px !important;
    border-bottom-left-radius: 5px !important;
    border-bottom-right-radius: 5px !important;
    border-top-right-radius: 5px !important;
}
input[type="text"]#explore::-webkit-input-placeholder {
	color: white !important;
	font-size: 18px !important;
	width: auto;
	text-align: center;
	padding-bottom: 0px;
}
input { 
	/* width: 90% !important; */
	font-size: 15px !important;
}
#username {
	margin-bottom: 10px;
}
#password {
	margin-right: 0 !important;
	margin-bottom: 20px;
}
#login-button {
	margin-left: 34% !important;
	width: 100px !important;
}
.navbar {
	height: 100px;
	position: fixed;
	margin-bottom: 20px;
	z-index: 1;
	width: 100%;
}
#nav-links {
	margin-top: -55px;
}
.navbar-brand {
	padding: 0px !important;
	margin-left: 20px !important;
	color: white !important;
	font-size: 25px !important;
}
#tatlogo {
	height: 80px;
	position: relative;
	top: -9px;
	padding-left: 10px;
}
#landing-header {
	margin-top: 20px;
}
.buttons {
	float: left;
	margin-right: none;
	margin-top: 20px;
}
.container-fluid {
	width: 100% !important;
	padding: 0 !important;
}
.navbar-default {
	width: 100% !important;
	padding: 0 5px 5px 5px;	
}
#landing-nav {
	border-bottom: solid #fb6966 2px;
}
#about-nav {
	border-bottom: solid #1e4be2 2px;
}
#berlin-nav {
	border-bottom: solid #00f9a7 2px;
}
#contact-about {
	color: white;
	font-size: 18px;
}
#contact-nav {
	border-bottom: solid #fb6966 2px; 
}
#cultural-tips-header {
	font-family: 'Fresca', sans-serif;
	font-size: 20px;
}
#create-profile-panel {
	width: 400px;
	margin-bottom: 200px;
}
#create-profile-header {
	font-family: 'Fresca', sans-serif;
	color: #777;
	font-size: 20px;
}
#creating-profile {
	margin-top: 30px;
	margin-left: 34%;
	background: #fecf75 !important;
	background-image: -webkit-linear-gradient(top, #fecf75, #fb6966)!important;
	background-image: -moz-linear-gradient(top, #fecf75, #fb6966)!important;
	background-image: -ms-linear-gradient(top, #fecf75, #fb6966)!important;
	background-image: -o-linear-gradient(top, #fecf75, #fb6966)!important;
	background-image: linear-gradient(to bottom, #fecf75, #fb6966)!important;
	-webkit-border-radius: 28;
	-moz-border-radius: 28;
	border-radius: 28px;
	color: #ffffff;
	padding: 10px 20px 10px 20px;
	text-decoration: none;
    border-top-left-radius: 5px !important;
    border-bottom-left-radius: 5px !important;
    border-bottom-right-radius: 5px !important;
    border-top-right-radius: 5px !important;
}
#profile-panel-body {
	margin-bottom: 0;
}
#login-panel {
	margin-bottom: 0 !important;
	margin-left: 5px;
	margin-right: 5px;
	width: 400px;
	height: 175px !important;
	border: none !important;
	align-content: center !important;
}
.login-panel {
	margin-bottom: 0 !important;
	height: 100% !important;
}
#login-col {
	padding-left: 0 !important;
}
#your-travels-header, #wish-list-header {
	font-family: 'Fresca', sans-serif;
	color: #777;
	font-size: 20px;
}
#wish-list-body, #your-travels-body {
	margin-bottom: 0;	
}
/* ... */

